--- a/testing/googly.css
+++ b/testing/googly.css
@@ -1,9 +1,11 @@
 .eye {
+  position: absolute;
   background-color: white;
   width: 40px;
   height: 40px;
   border: 5px solid black;
-  border-radius: 40px; }
+  border-radius: 40px;
+  float: right; }
   .eye .pupil {
     background-color: black;
     width: 30px;
@@ -13,6 +15,16 @@
       margin-top: 10px; }
     .eye .pupil.right {
       margin-left: 10px; }
+
+.trash {
+  width: 100px;
+  height: 100px;
+  border: solid 1px black;
+  position: fixed;
+  top: 0;
+  right: 10px;
+  background: rgba(255, 0, 0, 0.4);
+  border-radius: 0 0 10px 10px; }
 
 #draggable {
   width: 150px;
