--- a/testing/googly.css
+++ b/testing/googly.css
@@ -1,25 +1,28 @@
 .eye {
-  position: absolute;
+  position: relative;
   background-color: white;
   width: 40px;
   height: 40px;
   border: 5px solid black;
   border-radius: 40px;
-  float: right; }
+  float: left;
+  margin: -20px;
+  top: 20px;
+  left: 20px; }
   .eye .pupil {
     background-color: black;
-    width: 30px;
-    height: 30px;
-    border-radius: 30px; }
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    border: 5px solid black; }
     .eye .pupil.down {
-      margin-top: 10px; }
+      margin-top: 20px; }
     .eye .pupil.right {
-      margin-left: 10px; }
+      margin-left: 20px; }
 
 .trash {
   width: 100px;
   height: 100px;
-  border: solid 1px black;
   position: fixed;
   top: 0;
   right: 10px;
