--- a/css/googly.css
+++ b/css/googly.css
@@ -13,12 +13,16 @@
     background-color: black;
     width: 20px;
     height: 20px;
-    border-radius: 20px;
-    border: 5px solid black; }
+    border-radius: 20px; }
     .eye .pupil.down {
       margin-top: 20px; }
     .eye .pupil.right {
       margin-left: 20px; }
+  .eye .bounding-box {
+    border: 3px dashed tomato;
+    width: 100%;
+    height: 100%;
+    position: absolute; }
 
 .trash {
   width: 100px;
