Extension working, with proper js/css injection and compilation  * A build script was added to /build_extension.sh  * Background js now injects the js and css properly when the extension * button is pushed  * SASS now compiles all css into a single script  * Closure used to compile js with libraries It's getting there! Load the unpacked extension folder from chrome://extensions

--- a/css/googly.scss
+++ b/css/googly.scss
@@ -1,3 +1,5 @@
+@import 'jquery-ui';
+
 $eye-size: 40px;
 $pupil-size: $eye-size * 0.75 - 10; //10px removed for pupil border
 .eye {
@@ -11,6 +13,7 @@ $pupil-size: $eye-size * 0.75 - 10; //10px removed for pupil border
 	margin: -$eye-size/2;
 	top: $eye-size/2;
 	left: $eye-size/2;
+	z-index: 1000;
 	.pupil {
 		background-color: black;
 		width: $pupil-size;
